--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1097,18 +1097,20 @@ _______________________________________________
 ferramentas
 
 
-@misc{ESPER,
-    author = {{ESPER}},
-    company = {Espertech},
+
+@misc{Esper,
+    author = {Esper},
+    company = {ESPERTECH},
     year = {2020},
-    url-date = {28/05/2020},
-    url = {http://www.espertech.com/esper}
+    url = {http://esper.espertech.com/}
 }
 
 
 
+
+
 @misc{edge-of-cloud,
-    author = {{edge-of-cloud}},
+    author = {edge-of-cloud},
     company = {edge-of-cloud},
     year = {2020},
     url-date = {28/05/2020},
@@ -1456,6 +1458,8 @@ isbn="978-3-662-44879-3"
     year = {2020},
     url = {http://esper.espertech.com/release-8.6.0/reference-esper/html/event_representation.html#eventrep_comparing}
 }
+
+
 
 @misc{CEPHandler,
     author = {CEPHandler},
