--- a/cap-conceitos.tex
+++ b/cap-conceitos.tex
@@ -2,6 +2,7 @@
 %% ------------------------------------------------------------------------- %%
 \chapter{Conceitos}
 \label{cap:conceitos}
+\index{concepts}
 
 %numero sugerido de paginas: 15
 %Conceitos:
@@ -524,7 +525,7 @@ O WSO Stream Processor \citep{WSO2SP}, por sua vez, tem recursos nativos para a 
 %modelo baseado em DAG
 
 
-\section{Isolamento de Ambiente e Processamento em Nuvem}
+\section{Isolamento de Ambiente e Processamento em Nuvem}\index{Cloud Tools}
 \label{sec:cloudtools}
 
 Para executar as ferramentas de CEP em plataformas de computação em nuvem, o uso de provedores de nuvem é necessário. Serviços de computação em nuvem, como o Google Cloud Platform - \cite{GCP}, o Microsoft Azure - \cite{Azure} e o Amazon Web Services - \cite{AWS}), são definidos como um modelo para permissão de acesso sob-demanda e configurável de recursos computacionais, que podem ser provisionados ou descartados rapidamente~\citep{CLoudComputing}. 
@@ -578,7 +579,7 @@ Outras práticas normalmente associada ao desenvolvimento de sistemas nativos de
 
 
 
-\section{Arquitetura de Microsserviços}
+\section{Arquitetura de Microsserviços}\index{microservices}
 \label{sec:microservicearquitecture}
 
 O desenvolvimento de sistemas nativos de nuvem geralmente se baseiam em arquiteturas de microsserviços~\citep{garrison2017cloud}. %Atualmente, sistemas nativos de nuvem estão migrando ou sendo implementados diretamente por meio de arquiteturas de microsserviços.%\todo{Começo de seção ruim. Do jeito que está escrito, parece que o projetista primeiro decide a estratégia de deploy do sistema (no caso, contêineres) para depois definir a arquitetura dele (microsserviços). E, na verdade, a ordem correta desse processo é a inversa. De qualquer forma, para sustentar que as arquiteturas de microsserviços são as melhores para a execução em nuvem na atualidade, você precisa citar referências bibliográficas sobre isso.}.%definição de microsserviço
