--- a/cap-introducao.tex
+++ b/cap-introducao.tex
@@ -73,9 +73,8 @@ Sistemas de processamento de dados em tempo real para Cidades Inteligentes preci
 %. Uma abordagem que muitas organizações estão adotando atualmente é o uso de computação em nuvem, onde aluga-se recursos computacionais de um provedor de nuvem de acordo com a quantidade de recursos e tempo de uso. Este tipo de abordagem para aquisição de infraestrutura de ambientes de execução permite que somente a quantidade necessária de recursos em cada momento seja adquirida, reduzindo custos com sub-utilização de máquinas e manutenção física.
 
 
-As solução atuais de software livre de CEP disponíveis na atualidade ~\cite{Esper,DroolsFusion,WSO2CEP} %(e.g., \todo{Incluir aqui a citação a essas ferramentas})  
+As solução de software livre de CEP disponíveis na atualidade~\citep{Esper,DroolsFusion,WSO2CEP} %(e.g., \todo{Incluir aqui a citação a essas ferramentas})  
 não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
-
 %As solução atuais de software livre de CEP  (e.g., \todo{Incluir aqui a citação a essas ferramentas}) não oferecem nativamente mecanismos de distribuição e auto-escalabilidade\todo{Nenhuma das ferramentas faz CEP distribuído? Não ter distribuição é uma coisa, não ter auto-escalabilidade é outra coisa diferente. As ferramentas não têm nenhuma das duas coisas? O resumo fala sobre as ferramentas não terem suporte nativo para a execução na nuvem. O resumo e a introdução precisam falar a mesma coisa.}. 
 Mas há muita pesquisa na área de distribuição de processamento de eventos e, em particular, de métodos de balanceamento da carga de trabalho nos nós do sistema. Trabalhos como os de~\cite{Isoyama:2012:SCE:2335484.2335498}, \cite{6906776} e \cite{Balkesen:2013:RRI:2488222.2488257} propuseram diferentes tipos de abordagens para tratar esse problema. As principais técnicas já apresentadas
 %para a distribuição do processamento de eventos 
@@ -140,7 +139,9 @@ O objetivo principal deste trabalho é a criação de uma arquitetura de Process
  %O uso de microsserviços facilita o desenvolvimento de uma arquitetura escalável e de fácil implantação, pois é possível criar  mais instâncias do mesmo microsserviço que executa funções que estão em sobrecarga. Além disto, foi decidido usar o estilo de coreografia para o desenho da arquitetura, onde os microsserviços se coordenam para a realização das funções do sistema. Isto resulta em um melhor funcionamento do sistema em caso de falhas pontuais, pois somente o microsserviço que encontrou a falha em execução é afetado.
  
 A solução, chamada de \texttt{CEP Handler}, foi desenhada seguindo o estilo arquitetural de microsserviços, no qual o sistema é construído como um conjunto de serviços pequenos e autônomos, que podem ser implantados e escalados de forma independente. 
-Na arquitetura \texttt{CEP Handler}, o processamento dos eventos é dividido entre múltiplas instâncias de um microsserviço de processamento de eventos, cada uma alocada em um nó diferente do sistema. Os microsserviços se coordenam para a realização das funções e a distribuição do processamento de eventos nos nós do sistema, ou seja, a coordenação se dá por meio de coreografia. Isso resulta em maior disponibilidade (que a provida por arquiteturas orquestradas) em caso de falhas pontuais, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. O sistema atinge a auto-escalabilidade a partir do monitoramento constante do uso de recursos por cada instância e requisição para o serviço de gerenciamento dinamico de recursos da criação de novos nós de processamento durante altas cargas de entrada ou da remoção de nós de processamento de eventos para cargas baixas de entrada, utilizando assim um modelo de escalabilidade horizontal.
+Na arquitetura \texttt{CEP Handler}, o processamento dos eventos é dividido entre múltiplas instâncias de um microsserviço de processamento de eventos, cada uma alocada em um nó diferente do sistema. Os microsserviços se coordenam para a realização das funções e a distribuição do processamento de eventos nos nós do sistema, ou seja, a coordenação se dá por meio de coreografia. Isso resulta em maior disponibilidade (que a provida por arquiteturas orquestradas) em caso de falhas pontuais, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. 
+
+O sistema atinge a auto-escalabilidade a partir do monitoramento constante do uso de recursos por cada instância e requisição para o serviço de gerenciamento dinâmico de recursos da criação de novos nós de processamento durante altas cargas de entrada ou da remoção de nós de processamento de eventos para cargas baixas de entrada, utilizando assim um modelo de escalabilidade horizontal.
 
 %\todo[inline]{Mas como o sistema auto-escala? Quando as instâncias são criadas ou removidas? Faltou falar aqui do gerenciamento dinâmico de recursos.}
 
@@ -156,7 +157,12 @@ Um protótipo da arquitetura \texttt{CEP Handler} foi implementado, utilizando s
 
 
 Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado, a partir de dados reais de posições de ônibus da frota do sistema de transporte público da cidade de São Paulo, SP.
-Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. O propósito foi verificar se o sistema realmente atingia a auto-escalabilidade, requisitando e integrando mais nós de processamento de acordo com o aumento de dados entrando no sistema continuamente. A avaliação foi realizada separadamente para ambos os algoritmos de balanceamento de carga, com o intuito de verificar o impacto do uso de cada um deles. Quatro métricas foram coletadas: latência, vazão, número total de eventos detectados e tempo de uso dos ambientes de execução. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta. O número de eventos detectados sofreu uma pequena varição entre uma execução e outra, que pode ser atribuída a variação de latência. O terceiro quartil das latências medidas durante todas as execuções ficou sempre abaixo de cem milissegundos. A média do tempo de uso do ambiente de execução não apresentou diferença significativa entre o uso de um algoritmo de balanceamento de carga ou outro.
+Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. O propósito foi verificar se o sistema realmente atingia a auto-escalabilidade, requisitando e integrando mais nós de processamento de acordo com o aumento de dados entrando no sistema continuamente. A avaliação foi realizada separadamente para os dois algoritmos de balanceamento de carga, com o intuito de verificar o impacto do uso de cada um deles. 
+Quatro métricas foram analisadas: latência, vazão, número total de eventos detectados e tempo de uso dos recursos computacionais do ambiente de execução. 
+
+Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta. O terceiro quartil das latências medidas durante todas as execuções ficou sempre abaixo de cem milissegundos, o que satisfaz os requisitos de processamento em tempo real do cenário considerado. O número de eventos detectados sofreu uma pequena varição entre uma execução e outra, que pode ser atribuída à variação de latência. 
+Não foi observada diferença significativa na média do tempo de uso de recursos computacionais dos dois algoritmos de balanceamento de
+carga implementados.
 
 %\todo[inline]{O parágrafo abaixo é o que já estava no seu texto. Observe que você apenas disse que fez um experimento para avaliar se o sistema de fato auto-escala, mas não contou os resultados dele. :)}
 
@@ -184,11 +190,11 @@ Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil 
 As contribuições deste trabalho são as seguintes:
 
 \begin{itemize}
-  \item[1.] Criação de uma arquitetura de microsserviços coreografada para a distribuição de processamento de eventos complexos nativa de nuvem, ou seja, que possui um mecanismo de tolerância a falhas no ambiente de execução, é auto-escalável horizontalmente. %\todo{olha o horizontal que não foi explicado antes aqui de novo - coloquei la no gerenciamento dinamico de recursos}
+  \item[1.] Criação de uma arquitetura de microsserviços coreografada para a distribuição de processamento de eventos complexos nativa de nuvem, ou seja, que possui um mecanismo de tolerância a falhas no ambiente de execução e é auto-escalável horizontalmente. %\todo{olha o horizontal que não foi explicado antes aqui de novo - coloquei la no gerenciamento dinamico de recursos}
   %e cujo uso de recursos computacionais por cada parte é referenciado em código de infraestrutura computacional\todo{final da frase está confuso}.
 
   
-  \item[2.] Implementação de um protótipo, com a arquitetura proposta, para o processamento de dados em tempo real por CEP com base em ferramentas de software livre. Este sistema foi desenvolvido para funcionar juntamente com a plataforma de software livre para cidades inteligentes InterSCity. %~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
+  \item[2.] Implementação de um protótipo, com a arquitetura proposta, para o processamento de dados em tempo real por CEP com base em ferramentas de software livre. Esse sistema foi desenvolvido para funcionar juntamente com a plataforma de software livre para cidades inteligentes InterSCity. %~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
   
   %O sistema utiliza diferentes bibliotecas e ferramentas para ter suporte nativo de nuvem\todo{"suporte nativo de nuvem" não faz sentido. Reescrever o trecho}, as quais facilitam a instanciação em qualquer provedor de nuvem privada.
   
@@ -227,6 +233,6 @@ As contribuições deste trabalho são as seguintes:
 \label{sec:organizacao_trabalho}
 
 
-No Capítulo~\ref{cap:conceitos}, apresenta-se os principais conceitos relacionados a Processamento de Eventos Complexos, arquitetura de microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta trabalhos que estudam a distribuição de CEP a partir de diferentes técnicas, aborda a execução de CEP em plataformas de nuvem e compara as conclusões sobre as pesquisas nessas áreas. No Capítulo \ref{cap:arquitetura}, apresenta-se com detalhes a arquitetura de microsserviços criada neste trabalho. Um protótipo de implementação da arquitetura e as ferramentas utilizadas nele  são apresentados em \ref{cap:prototype}. O desenho do experimento utilizado para avaliar o sistema é apresentado no Capítulo \ref{cap:experimento} e os resultados do experimento em si são apresentados no Capítulo \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} discute os resultados e  possíveis contribuições futuras.
+O Capítulo~\ref{cap:conceitos} introduz os principais conceitos relacionados a Processamento de Eventos Complexos, arquitetura de microsserviços e técnicas de distribuição de processamento com estado. O Capítulo \ref{cap:trabalhos} apresenta trabalhos que estudam a distribuição de CEP a partir de diferentes técnicas, aborda a execução de CEP em plataformas de nuvem e compara as conclusões sobre as pesquisas nessas áreas. No Capítulo \ref{cap:arquitetura}, descreve-se com detalhes a arquitetura de microsserviços criada neste trabalho. Um protótipo de implementação da arquitetura e as ferramentas utilizadas nele  são apresentados em \ref{cap:prototype}. O desenho do experimento utilizado para avaliar o sistema é apresentado no Capítulo \ref{cap:experimento} e os resultados do experimento em si são apresentados no Capítulo \ref{cap:resultados}. Finalmente, o Capítulo~\ref{cap:conclusoes} discute os resultados e  possíveis contribuições futuras.
 
 %As sequências testadas no trabalho estão disponíveis no Apêndice \ref{ape:sequencias}.
