--- a/cap-conclusoes.tex
+++ b/cap-conclusoes.tex
@@ -4,23 +4,27 @@
 
 
 
-As técnicas e ferramentas de Processamento de Eventos Complexos foram desenvolvidas com o propósito explícito de lidar com o processamento de dados em tempo real de forma contínua. A lista de operadores desenvolvida para a definição de tipos de eventos é extensa, mas necessária para que as linguagens de definição de consultas em tempo real sejam tão abrangentes em sua cobertura de possíveis tipos de eventos quanto as linguagens de consulta a bancos de dados relacionais são no campo de consultas por lote.
+As técnicas e ferramentas de Processamento de Eventos Complexos foram desenvolvidas com o propósito explícito de lidar com o processamento de dados em tempo real de forma contínua. A lista de operadores desenvolvidos para a definição de tipos de eventos é extensa, mas necessária para que as linguagens de definição de consultas em tempo real sejam tão abrangentes em sua cobertura de possíveis tipos de eventos quanto as linguagens de consulta a bancos de dados relacionais são no campo de consultas por lote.
 
-Uma dificuldade encontrada em utilizar Processamento de Eventos Complexos para a detecção de eventos em grande escala, como em aplicações para cidades inteligente, é a implementação de um sistema que seja escalável, ou seja, que consiga aumentar sua capacidade de processamento de acordo com a carga atribuída a ele. Se o aumento na capacidade de processamento requer um administrador humano para monitorar o sistema e a carga de entrada constantemente e aplicar as medidas necessárias de acordo com o incremento de carga, o desempenho do sistema fica limitado ao tempo de resposta do administrador. Para atender requisitos de tempo real no monitoramento contínuo de um ambiente urbano, o próprio sistema deve ser capaz de aumentar sua alocação de recursos quando necessário, ou seja, deve ser auto-escalável. As soluções encontradas atualmente na literatura, apesar de apresentar varias técnicas para a distribuição do processamento de eventos, não exploram o desenvolvimento de sistemas de processamento de eventos complexos que sejam auto-escaláveis e gerenciem dinamicamente o uso de recursos do sistema e concomitantemente consideram a tolerância a falhas para cada nó de processamento um requisito igualmente importante, de forma que tendem a focar na busca só pela escalabilidade ou tolerância a falhas.
+Uma dificuldade encontrada em utilizar Processamento de Eventos Complexos para a detecção de eventos em grande escala, como em aplicações para cidades inteligente, é a implementação de um sistema que seja escalável, ou seja, que consiga aumentar sua capacidade de processamento de acordo com a carga atribuída a ele. Se o aumento na capacidade de processamento requer um administrador humano para monitorar o sistema e a carga de entrada constantemente e aplicar as medidas necessárias de acordo com o incremento de carga, o desempenho do sistema fica limitado ao tempo de resposta do administrador. 
+
+Para atender requisitos de tempo real no monitoramento contínuo de um ambiente urbano, o próprio sistema de processamento de eventos deve ser capaz de aumentar sua alocação de recursos quando necessário, ou seja, deve ser auto-escalável. As soluções encontradas atualmente na literatura, apesar de apresentar várias técnicas para a distribuição, não exploram o desenvolvimento de sistemas de processamento de eventos complexos que sejam auto-escaláveis, gerenciando dinamicamente o uso de recursos do sistema, e que considerem a tolerância a falhas nos nós de processamento um requisito igualmente importante. De forma  geral, esses trabalhos  tendem a focar a busca só da escalabilidade ou só da tolerância a falhas.
 
 %\todo[inline]{Neste ponto, cabe falar algo sobre os trabalhos relacionados. Dizer que encontra-se na literatura diversas propostas para distribuição de CEP, mas que não são soluções auto-escaláveis e nem exploram o uso de plataformas de nuvem em todo o seu potencial. É importante incluir esse novo parágrafo aqui, para evidenciar o ineditismo da solução que é proposta no seu trabalho.}
 
 A partir da combinação de mecanismos de processamento de eventos complexos de código aberto com sistemas de mensageria em tempo real, de isolamento de ambiente de execução, armazenamento de dados em memória RAM e técnicas de gerenciamento dinâmico de recursos na nuvem, foi criada neste trabalho uma arquitetura de microsserviços que traz a pesquisa de Processamento de Eventos Complexos para o ambiente de desenvolvimento nativo de nuvem. Este é um passo importante, visto que o crescimento na popularidade e uso de plataformas de nuvens para o processamento em todas as áreas da Computação está impulsionando a pesquisa de sistemas nativos de nuvem para o melhor aproveitamento dos recursos disponíveis nesse ambiente de execução.
 
-Na arquitetura desenvolvida neste trabalho, chamada de \texttt{CEP Handler}, a auto-escalabilidade é provida por um mecanismo de detecção de sobrecarga de recursos e de distribuição do processamento de eventos entre múltiplas instâncias de um mesmo microsserviço em execução na nuvem. O sistema detecta automaticamente a necessidade da criação de novas instâncias de processamento de eventos e as requisita utilizando as mesmas especificações de recursos computacionais iguais aos utilizados pelas instâncias em sobrecarga. 
+Na arquitetura desenvolvida neste trabalho, chamada de \texttt{CEP Handler}, a auto-escalabilidade é provida por um mecanismo de detecção de sobrecarga de recursos e de distribuição do processamento de eventos entre múltiplas instâncias de um mesmo microsserviço em execução na nuvem. O sistema detecta automaticamente a necessidade da criação de novas instâncias de processamento de eventos e as requisita utilizando especificações de recursos computacionais iguais aos utilizados pelas instâncias em sobrecarga. 
 
-A tolerância a falhas é satisfeita no sistema pela escolha do estilo arquitetural de coreografia na comunicação entre instâncias de processamento de eventos. Nesse estilo de coordenação, não há uma instância central que distribui o processamento de eventos, então as instâncias devem entrar em acordo sobre qual instância processará qual tipo de evento. Dessa forma, a detecção de eventos em uma instância não é impactada pela falha de execução em outra instância. Além disso, cada instância possui um mecanismo para verificação ao início do processamento de eventos se ela foi terminada indevidamente previamente e, ser for esse o caso, consegue recadastrar os tipos de eventos previamente cadastrados. O cumprimento desses dois requisitos garante que o sistema desenvolvido seja nativo de nuvem e diminui a necessidade de intervenção manual durante seu funcionamento. % \todo{Complementar o parágrafo, falando sobre o uso da coreografia no balanceamento de carga entre as instâncias. Você não falou sobre a coreografia em nenhum lugar da conclusão.} 
+A tolerância a falhas é satisfeita no sistema pela escolha do estilo arquitetural de coreografia na comunicação entre instâncias de processamento de eventos. Nesse estilo de coordenação, não há uma instância central que distribui o processamento de eventos, então as instâncias devem entrar em acordo sobre qual instância processará cada tipo de evento. Dessa forma, a detecção de eventos em uma instância não é impactada pela falha de execução em outra instância. Além disso, cada instância possui um mecanismo para verificar, ao início do processamento de eventos, se ela foi terminada indevidamente previamente. Se for esse o caso, ela consegue recadastrar os tipos de eventos previamente cadastrados. 
+A auto-escalabilidade e a tolerância a falhas proveem o processamento de eventos nativo de nuvem e diminuem a necessidade de intervenção manual durante o funcionamento do sistema. 
+% \todo{Complementar o parágrafo, falando sobre o uso da coreografia no balanceamento de carga entre as instâncias. Você não falou sobre a coreografia em nenhum lugar da conclusão.} 
 
 %Além da auto-escalabilidade, há outros dois requisitos que guiam o desenvolvimento de um software nativo de nuvem: a tolerância a falhas do ambiente de execução e o uso de infraestrutura como código. Para atingir a tolerância a falhas no sistema \texttt{CEP Handler} inteiro, todos os microsserviços foram desenvolvidos com mecanismos de recuperação e foi escolhido o estilo arquitetural de coreografia para a coordenação entre as instâncias de processamento de eventos. Isso permite que o processamento de eventos não seja impactado em instâncias que não encontrem falhas em sua execução. Esses mecanismos, em caso de ocorrência de uma falha, retornam o microsserviço ao seu estado de antes da falha. Também foram levados em consideração na escolha do sistema de bancos de dados e do sistema de mensageria usados os seus mecanismos de recuperação de falhas. Complementarmente a isso, o uso de soluções de orquestração de nuvem permitiu que as especificações dos recursos computacionais utilizados por cada parte do sistema fossem escritas em código. Com isso, a re-instanciação de qualquer uma das partes do sistema \texttt{CEP Handler} é feita automaticamente pelo sistema de orquestração de nuvem, utilizando a mesma quantidade de recursos computacionais. Essas três técnicas -- auto-escalabilidade, infraestrutura como código e tolerância a falhas no ambiente de execução -- se completam no desenvolvimento de qualquer sistema nativo de nuvem e servem para garantir um funcionamento contínuo e com altos níveis de disponibilidade para o usuário. 
 
-A partir da pesquisa de trabalhos relacionados a distribuição de processamento de eventos complexos, detalhada no Capítulo \ref{cap:trabalhos}, dois algoritmos de balanceamento de carga foram criados para o \texttt{CEP Handler}. Esses algoritmos definem a ordem de realocação dos tipos de eventos de um nó de processamento para outro. Um dos algoritmos seleciona o tipo de evento a ser realocado a partir do tempo necessário para reconstruir seu estado em outro nó de processamento. O outro algoritmo seleciona o tipo de evento a ser realocado considerando a similaridade entre os seus tipos de entrada e os tipos de entrada dos demais tipos processados no mesmo nó, tentando manter agrupados num mesmo nó os tipos que compartilham os mesmos tipos de entrada, minimizando assim a duplicação na transmissão de eventos para os nós de processamento do sistema.
+A partir da pesquisa de trabalhos relacionados a distribuição de processamento de eventos complexos, detalhada no Capítulo \ref{cap:trabalhos}, dois algoritmos de balanceamento de carga foram criados para o \texttt{CEP Handler}. Esses algoritmos definem a ordem de realocação dos tipos de evento de um nó de processamento para outro. Um dos algoritmos seleciona o tipo de evento a ser realocado a partir do tempo necessário para reconstruir seu estado em outro nó de processamento. O outro algoritmo seleciona o tipo de evento a ser realocado considerando a similaridade entre os seus tipos de entrada e os tipos de entrada dos demais tipos processados no mesmo nó, tentando manter agrupados num mesmo nó os tipos que compartilham os mesmos tipos de entrada, minimizando assim a duplicação na transmissão de eventos para os nós de processamento do sistema.
 
-Para avaliar a arquitetura proposta, foi construído um protótipo dela utilizando somente ferramentas de código aberto, como visto no Capítulo \ref{cap:prototype}. O protótipo foi implementado como um serviço da plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
+Para avaliar a arquitetura proposta, foi construído um protótipo dela utilizando somente ferramentas de \textit{software} livre, como visto no Capítulo \ref{cap:prototype}. O protótipo foi implementado como uma extensão da plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
 
 
 
@@ -31,9 +35,9 @@ público da cidade de São Paulo, SP, foi usado como cenário experimental na av
 %A partir da seleção de 708 linhas, foram criados 15.729 tipos de eventos 
 %\todo{Aqui, é preciso falar dos números que caracterizam os dados: número de linhas e ônibus considerados no experimento, número total eventos de localização, taxa de entrada dos dados, etc. }. 
 
-A partir da seleção de 708 linhas, foram criados 15.729 tipos de eventos, para cinco categorias de tipos de eventos distintas, nas quais cada uma utilizava métodos distintos de agregação de eventos. A rede de processamento de eventos criada para o experimento usou tanto tipos de eventos simples, que não possuem janelas de agregação de eventos de entrada, quanto tipos de eventos que as utilizam. Um dos desafios na implementação do sistema foi a criação de um método para a realocação dos tipos de eventos entre nós de processamento com a garantia de que nenhum evento seria descartado durante o processo de realocação. Isso foi feito a partir do cálculo do tempo necessário para reconstruir o estado da janela de agregação do tipo de evento em realocação, com base na própria definição do tipo. Até que o tempo necessário para a reconstrução do estado no novo nó transcorra, o tipo de evento continua sendo detectado pelo seu nó de processamento original.
+A partir das 708 linhas, foram criados 15.729 tipos de eventos, de cinco categorias distintas, que utilizam diferentes métodos de agregação de eventos. A rede de processamento de eventos criada para o experimento usou tanto tipos de eventos simples, que não possuem janelas de agregação de eventos de entrada, quanto tipos de eventos que as utilizam. Um dos desafios na implementação do sistema foi a criação de um método para a realocação dos tipos de eventos entre nós de processamento com a garantia de que nenhum evento seria descartado durante o processo de realocação. Isso é feito a partir do cálculo do tempo necessário para reconstruir o estado da janela de agregação do tipo de evento em realocação, com base na própria definição do tipo. Até que o tempo necessário para a reconstrução do estado no novo nó transcorra, o tipo de evento continua sendo detectado pelo seu nó de processamento original.
 
-O experimento foi executado com dez repetições ao total, cinco para cada um dos algoritmos de balanceamento de carga implementados. A partir dos resultados coletados, descritos no Capítulo~\ref{cap:resultados}, pode-se verificar que o sistema apresentou latências que normalmente ficaram abaixo de cem milissegundos,  satisfazendo os requisitos de processamento em tempo real do cenário considerado. Além disso, os experimentos mostraram que o sistema consegue automaticamente verificar uma sobrecarga no uso de recursos computacionais e requisitar recursos adicionais do provedor de nuvem utilizado, se auto-escalando e rebalanceando conforme a variação da carga de trabalho. Não foi observada diferença significativa entre os desempenhos dos dois algoritmos de balanceamento de carga implementados.
+O experimento foi executado com dez repetições ao total, cinco para cada um dos algoritmos de balanceamento de carga implementados. A partir dos resultados coletados, descritos no Capítulo~\ref{cap:resultados}, pode-se verificar que o sistema apresentou latências que normalmente ficaram abaixo de cem milissegundos,  satisfazendo os requisitos de processamento em tempo real do cenário considerado. Além disso, o experimento mostrou que o sistema consegue automaticamente identificar uma sobrecarga no uso de recursos computacionais e requisitar recursos adicionais do provedor de nuvem utilizado, se auto-escalando e rebalanceando conforme a variação da carga de trabalho. Não foi observada diferença significativa entre os desempenhos dos dois algoritmos de balanceamento de carga implementados.
 %Para a rede de processamento de eventos utilizada, nenhum dos dois algoritmos de balanceamento de carga apresentou um desempenho superior significativo em relação ao outro. 
 
 
@@ -71,7 +75,7 @@ O experimento foi executado com dez repetições ao total, cinco para cada um do
 %------------------------------------------------------
 %\section{Considerações Finais} 
 
-A partir do estudo das pesquisas e técnicas de processamento em tempo real e de sistemas nativos a nuvem foi possível desenvolver um sistema que não depende de monitoramento ativo por parte de um administrador para se recuperar de falhas no ambiente de execução e se auto-escalar de acordo com a carga de entrada. Para o oferecimento de serviços que tornem as cidades inteligentes, sistemas que cumprem os requisitos para serem nativos de nuvem se fazem necessários para que plataformas de cidades inteligentes servindo a cidade consigam detectar ocorrências de interesse em tempo real, ajustando-se automaticamente a variação de carga entrando no sistema e se recuperando de possíveis falhas sem a necessidade de intervenção manual de operadores do sistema.
+A partir do estudo das pesquisas e técnicas de processamento em tempo real e de sistemas nativos a nuvem, foi possível desenvolver um sistema que não depende de monitoramento ativo por parte de um administrador para se recuperar de falhas no ambiente de execução e se auto-escalar de acordo com a carga de entrada. Para o oferecimento de serviços que tornem as cidades inteligentes, sistemas que cumprem os requisitos para serem nativos de nuvem se fazem necessários para que plataformas de cidades inteligentes servindo a cidade consigam detectar ocorrências de interesse em tempo real, ajustando-se automaticamente a variação de carga entrando no sistema e se recuperando de possíveis falhas sem a necessidade de intervenção manual de operadores do sistema.
 
 
 %cidade tenha uma experiência confortável usando serviços que se conectam com arcabouços de plataformas de cidades inteligentes. 
@@ -108,6 +112,7 @@ A seguir, estão algumas das sugestões de como explorar ainda mais a arquitetur
     \item Paralelização do processo de realocação de eventos em \textit{threads}, para diminuir o tempo necessário para a redistribuição de tipos de eventos entre instâncias de \texttt{CEP Worker}.
     \item Comparação do uso de outros sistemas de mensageria além do RabbitMQ, que foi um dos fatores limitantes na definição do experimento.
     \item Inclusão de um sistema de recuperação de falhas para reconstrução dos estados dos tipos de eventos a partir do reenvio dos eventos de entrada de acordo com as janelas definidas pelos tipos de eventos processados por cada \texttt{CEP Worker}.
+    \item Inclusão do suporte a representação de eventos pelo formato JSON, o qual é o formato de dados utilizado nativamente na Plataforma InterSCity.
 \end{itemize}
 
 %\todo[inline]{Padronizar no texto a capitalizaçã de 'rabbitmq'. Ele aparece de várias formas diferentes: RabitMQ, Rabitmq e rabitmq}
