--- a/cap-prototipo.tex
+++ b/cap-prototipo.tex
@@ -1,5 +1,5 @@
 %% ------------------------------------------------------------------------- %%
-\chapter{Protótipo e Ferramentas Selecionadas}
+\chapter{Protótipo e Ferramentas Selecionadas}\index{Prototype and selected tools}
 \label{cap:prototype}
 
 %A partir da arquitetura apresentada no \autoref{cap:arquitetura}, um protótipo do sistema CEP Handler foi construído. 
@@ -13,13 +13,15 @@
 %\section{Ferramentas selecionadas} 
 
 Neste trabalho, um protótipo da arquitetura para sistema de CEP distribuído apresentada no Capítulo~\ref{cap:arquitetura} foi implementado e avaliado. 
-A escolha das ferramentas para a implementação do protótipo levou em conta vários fatores que dependem da função de cada ferramenta no sistema. Mas um dos critérios de seleção que foi aplicado foi o de que os \textit{softwares} utilizados na implementação deveriam ser de \textit{software} livre, com uma licença que garantisse a visualização,  alteração e distribuição do código da ferramenta. O código desenvolvido pode ser encontrado no repositório online GitLab~\citep{CEPHandler}. A \autoref{fig:system_architecture_prto} representa a arquitetura do sistema com as ferramentas selecionadas.
+A escolha das ferramentas para a implementação do protótipo levou em conta vários fatores que dependem da função de cada ferramenta no sistema. Mas um dos critérios de seleção aplicado foi o de que os \textit{softwares} utilizados na implementação deveriam ser livres, com uma licença que garantisse a visualização,  alteração e distribuição do código da ferramenta. O código desenvolvido pode ser encontrado no repositório online GitLab~\citep{CEPHandler}. 
+
+A \autoref{fig:system_architecture_prto} representa a arquitetura do sistema com as ferramentas selecionadas.
 As seções a seguir apresentam detalhes sobre a escolha das ferramentas e a implementação do protótipo.
 
 
 \begin{figure}[hb!]
       \centering
-      \includegraphics[width=0.8\textwidth]{figuras/graphics/prot_dia.pdf}
+      \includegraphics[width=0.7\textwidth]{figuras/graphics/prot_dia.pdf}
       \caption{Protótipo da arquitetura do \texttt{CEP Handler}}
       \label{fig:system_architecture_prto}
 \end{figure}
@@ -27,7 +29,7 @@ As seções a seguir apresentam detalhes sobre a escolha das ferramentas e a imp
 %\todo[inline]{Fernando, você poderia criar uma nova versão da imagem da sua arquitetura com os nomes das ferramentas usadas em cada microsserviço, para dar uma visão geral da escolhas de implementação.  Essa imagem poderia ficar aqui, na introdução do capítulo 5.}
 
 \subsubsection{A Plataforma InterSCity}
-A plataforma de cidades inteligentes InterSCity foi projetada e desenvolvida pelo Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes~\citep{del2019design}, sediado no IME-USP, para o desenvolvimento e suporte a projetos de Cidades Inteligentes. O principal propósito da plataforma é prover serviços de alto nível e APIs RESTful para suporte no desenvolvimento de novos serviços para as cidades. A plataforma adota uma arquitetura de microsserviços para suportar a integração de uma grande quantidade de recursos e dados e prover serviços de qualidade para a cidade. Os sensores ou atuadores na cidade são considerados Recursos, que podem enviar diferentes tipos de dados. Cada Recurso está associado a uma ou mais Capacidades, que descrevem quais tipos de dados os sensores podem coletar ou quais ações os atuadores podem realizar. A seguir, são descritos os principais microsserviços da plataforma:
+A plataforma de cidades inteligentes InterSCity foi projetada e desenvolvida pelo Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes~\citep{del2019design}, sediado no IME-USP, para o desenvolvimento e suporte a projetos de Cidades Inteligentes. O principal propósito da plataforma é prover serviços de alto nível e APIs RESTful para suporte no desenvolvimento de novos serviços para as cidades. A plataforma adota uma arquitetura de microsserviços para possibilitar a integração de uma grande quantidade de recursos e dados e prover serviços de qualidade para a cidade. Na plataforma, os sensores ou atuadores na cidade são considerados Recursos, que podem enviar diferentes tipos de dados. Cada Recurso está associado a uma ou mais Capacidades, que descrevem quais tipos de dados os sensores podem coletar ou quais ações os atuadores podem realizar. A seguir, são descritos os principais microsserviços da plataforma:
 
 %serve para unificar os vários serviços urbanos, de forma que possam interagir mais facilmente e que exista uma maior interação entre diversos setores da administração pública, entre entidades governamentais e serviços privados e entre todas as partes envolvidas\todo{Essa descrição da plataforma está muito baseada em "interação" entre serviços e órgãos, parece muito idealizada. Aqui, é melhor você apresentar uma definição mais tecnológica dela, como a que aparece em https://interscity.org/software/interscity-platform/ }. Ela consiste em um conjunto de microsserviços, no qual cada um tem uma função diferente relacionada ao manuseio de dados urbanos.
 
@@ -44,24 +46,24 @@ Como o sistema de processamento de eventos desenvolvido neste trabalho foi imple
 
 
 \section{Ferramenta de Processamento de Eventos}
-Para o processamento de eventos nos nós do sistema distribuído (ou seja, nas instâncias de \texttt{CEP Worker}), foi escolhida a ferramenta mais utilizada pela comunidade de CEP e que possui a interface mais conhecida -- a \cite{ESPER}. As vastas documentação e comunidade de apoio dessa ferramenta facilitaram o seu uso na implementação do sistema \texttt{CEP Handler} e a comparação de seu desempenho com o de outros trabalhos relacionados, visto que muitos deles também utilizaram ESPER como ferramenta de CEP.
-
-%\subsection{Representação de Eventos}
-
-A ESPER permite representar eventos em alguns formatos diferentes, porém somente três deles apresentam bom desempenho\citep{EsperEventRepresentation}:
+Para o processamento de eventos nos nós do sistema distribuído (ou seja, nas instâncias de \texttt{CEP Worker}), foi escolhida a ferramenta mais utilizada pela comunidade de CEP e que possui a interface mais conhecida -- a \cite{Esper}. As vastas documentação e comunidade de apoio dessa ferramenta facilitaram o seu uso na implementação do sistema \texttt{CEP Handler}. % e a comparação de seu desempenho com o de outros trabalhos relacionados, visto que muitos deles também utilizaram ESPER como ferramenta de CEP\todo{Hum... nas discussões dos resultados dos seus experimentos, nenhuma comparação foi feita com os resultados dos trabalhos relacionados. Talvez seja melhor remover esse trecho.}.
+A ESPER permite representar eventos em alguns formatos diferentes, porém somente três deles apresentam ocupam o mínimo de memória durante o processamento~\citep{EsperEventRepresentation}: %bom desempenho \todo{mas bom desempenho quanto a quê? Espaço ocupado, facilidade de processamento?} 
 
 \begin{itemize}
 \item \textbf{Java Object Array}: possibilita trabalhar com eventos representados por vetores de objetos, em que cada campo do objeto representa um campo do evento. Essa abordagem permite trabalhar com qualquer evento, mesmo quando não se sabe quais medidas ou campos ele contém, mas tem a desvantagem de ser uma representação específica da linguagem Java.
 \item \textbf{Classe Java - POJO}: possibilita representar cada evento como uma definição de classe em um arquivo Java. Esse formato só pode ser utilizado para tratar eventos em um contexto no qual os campos já são previamente conhecidos, o que não condiz com a proposta deste trabalho, ou utilizando geração automática de código Java, o que tornaria necessário recompilar o \texttt{CEP Worker} e instanciá-lo novamente toda vez que um novo evento fosse cadastrado em uma instância dele ativa, forçando o sistema a parar o processamento para isso.
-\item \textbf{Apache Avro}: Apache \cite{Avro} é um protocolo de seriação de dados implementado em várias linguagens. Ele apresenta um desempenho interno tão bom quanto um vetor de objetos Java, com a vantagem de poder ser lido por outros softwares em outras linguagens. Feito inicialmente para o Apache \cite{hadoop}, atualmente ele é aceito em vários sistemas de processamento em tempo real além do ESPER, como Apache \cite{spark}, o que diminui o custo de integração com outros serviços no futuro.
+\item \textbf{Apache Avro}: Apache \cite{Avro} é um protocolo de seriação de dados implementado em várias linguagens. Ele apresenta um uso de memória interno tão pequeno quanto um vetor de objetos Java, com a vantagem de poder ser lido por outros softwares em outras linguagens. Feito inicialmente para o Apache \cite{hadoop}, atualmente ele é aceito em vários sistemas de processamento em tempo real além do ESPER, como o Apache \cite{spark}, o que diminui o custo de integração com outros serviços no futuro.
 \end{itemize}
 
-Foi escolhido o uso de Apache Avro para a representação de enventos neste trabalho, por ser independente do Java, desta forma deixando o sistema mais desacoplado de qualquer linguagem de programação. Outro fator limitante no desenvolvimento do protótipo foi o suporte aos tipos de janelas de agregação. Como discutido na Seção \ref{sec:loadDistribution}, é necessário determinar o tamanho das janelas de dados a partir da definição dos tipos de eventos. De todas as janelas de dados oferecidas pelo ESPER~\citep{ESPERDataWindows}, só foi implementado o suporte a quatro: \texttt{ext\_timed}, \texttt{ext\_time\_batch}, \texttt{length} e \texttt{length\_batch}. Os dois primeiro foram selecionados por serem um exemplo de janelas temporais no qual o tempo utilizado é externo e não necessita da coordenação dos relógios internos de cada nó de processamento de eventos. Os dois últimos foram selecionados como exemplos de janelas de agregação por número de eventos por serem um dos tipos mais comuns de janelas de dados utilizados pela comunidade. %O tempo necessário para a realocação de tipos de eventos que usam janelas de agregação dos tipos \texttt{length} e \texttt{length\_batch} pode ser determinado a partir da divisão do tamanho da janela pelo fluxo de eventos por segundo para cada tipo de evento de entrada.
+Optou-se pelo uso do Apache Avro para a representação de eventos neste trabalho, por ele ser independente do Java, deixando, dessa forma,  o sistema mais desacoplado de qualquer linguagem de programação. 
+Durante o desenvolvimento deste trabalho, foi adicionada à ferramenta ESPER suporte à representação de eventos com o formato JSON. A representação de eventos por JSON tem um uso de memória tão pequeno quanto o dos outros formatos apresentados aqui, mas não foi  considerada pois o sistema e os experimentos já estavam desenvolvidos para o uso do formato Avro quando ela ficou disponível. 
+
+Um fator limitante no desenvolvimento do protótipo foi o suporte aos tipos de janelas de agregação. Como discutido na Seção \ref{sec:loadDistribution}, para o balanceamento da carga entre as instâncias de processamento, é necessário determinar o tamanho das janelas de dados a partir da definição dos tipos de eventos. De todos os tipos de janelas de dados oferecidas pelo ESPER~\citep{ESPERDataWindows}, só foi implementado o suporte a quatro: \texttt{ext\_timed}, \texttt{ext\_time\_batch}, \texttt{length} e \texttt{length\_batch}. Os dois primeiro foram selecionados por serem exemplos de janelas temporais nos quais o tempo utilizado é externo e não necessita da coordenação dos relógios internos dos nós de processamento de eventos. Os dois últimos foram selecionados como exemplos de janelas de agregação por número de eventos, por serem um dos tipos mais comuns de janelas de dados utilizados. %O tempo necessário para a realocação de tipos de eventos que usam janelas de agregação dos tipos \texttt{length} e \texttt{length\_batch} pode ser determinado a partir da divisão do tamanho da janela pelo fluxo de eventos por segundo para cada tipo de evento de entrada.
 
 %\todo[inline]{Ué, a seção termina sem explicar qual desses formatos é de fato usado no seu sistema. }
 
 \section{Microsserviços sem Estado}
-O \textit{CEP Cataloger}, \textit{Event Composer} e \textit{Event Sender} são microsserviços que só oferecem métodos que não guardam estado. A implementação dos três microsserviços foi feita usando Docker para o isolamento de ambiente de execução, de forma que poderiam ser escritas em qualquer linguagem de programação com suporte a clientes dos outros serviços. Pelo conhecimento prévio em Java, essa foi a linguagem escolhida para o desenvolvimento dos três microsserviços.
+O \texttt{CEP Cataloger}, \texttt{Event Composer} e \texttt{Event Sender} são microsserviços que só oferecem métodos que não guardam estado. A implementação dos três microsserviços foi feita usando Docker para o isolamento de ambiente de execução, de forma que poderia ser escrita em qualquer linguagem de programação com suporte a clientes dos outros serviços. Pelo conhecimento prévio de Java do autor do trabalho, essa foi a linguagem escolhida para o desenvolvimento dos três microsserviços.
 
 
 %utilizando a ferramenta de automação\todo{automação de que?} \cite{maven} para inserção de dependências e colocados dentro de imagens Docker\todo{Rever o final da frase, há um erro de concordância que está comprometendo a compreensão.}.
@@ -83,9 +85,9 @@ Para executar os contêineres em ambientes de nuvem, existem várias alternativa
 Entre os orquestradores de \textit{software} livre, três se destacam:
 
 \begin{itemize}
-    \item \textbf{Apache Mesos}~\citep{Mesos}: Desenvolvido inicialmente pela universidade de Berkeley, depois passou a ser mantido pela Apache Foundation. Foi desenvolvido sem foco em contêineres, mas em coordenação de \textit{clusters} de computadores.
+    \item \textbf{Apache Mesos}~\citep{Mesos}: Desenvolvido inicialmente pela universidade de Berkeley, depois passou a ser mantido pela Apache Foundation. Foi desenvolvido com foco em coordenação de \textit{clusters} de computadores e depois passou a receber suporte a administração de contêineres. %\todo{explicação estranha. rever}.
     \item \textbf{Docker Swarm}~\cite{Swarm}: Desenvolvido pela mesma empresa que mantém a ferramenta Docker, o Docker Swarm tem compatibilidade nativa com o sistema de isolamento de ambientes Docker.
-    \item \textbf{Kubernetes}~\citep{Kubernetes}: Desenvolvido pela Google com o codinome Borg internamente, teve seu \textit{software} livre e passou a ser mantido pela \textit{Cloud Native Computing Foundation} - \cite{cnfc}. A CNCF é uma fundação voltada ao desenvolvimento de ferramentas para sistemas feitos nativamente para execução em nuvem.
+    \item \textbf{Kubernetes}~\citep{Kubernetes}: Desenvolvido pela Google com o codinome Borg internamente, teve seu código aberto em e passou a ser mantido pela \textit{Cloud Native Computing Foundation} - \cite{cnfc}. A CNCF é uma fundação voltada ao desenvolvimento de ferramentas para sistemas feitos nativamente para execução em nuvem.
 \end{itemize}  
     
 \cite{Truyen_2019} fizeram uma comparação dos três orquestradores de contêineres e concluíram que o Kubernetes oferece o maior número de opções de configuração entre os três. Além disso, é o único que possui suporte nativo pelas três maiores provedoras de computação em nuvem (AWS, GCP e Azure). Por esses motivos, o Kubernetes foi escolhido para a implementação do protótipo aqui apresentado.
@@ -93,8 +95,8 @@ Entre os orquestradores de \textit{software} livre, três se destacam:
 
 \section{Transmissão Assíncrona}
 
-Para a transmissão de eventos em tempo real foi escolhido o \textit{broker} de mensagens RabbitMQ~\citep{RabbitMq}. RabbitMQ é um dos mais usados brokers atualmente, pois suporta vários protocolos de comunicação assíncrona~\citep{Dobbelaere:2017:KVR:3093742.3093908}. O principal fator para a escolha do RabbitMQ como \textit{broker} foi a compatibilidade com a plataforma InterSCity, cuja implementação já utiliza o RabbitMQ como mensageiro assíncrono. Já que o sistema proposto neste trabalho foi desenvolvido como uma extensão da plataforma InterSCity, é interessante utilizar em sua implementação as mesmas ferramentas usadas na plataforma, para permitir uma maior integração entre eles.
-No protótipo do sistema aqui apresentado, o RabbitMQ opera dentro de um contêiner Docker, cuja imagem é disponibilizada oficialmente pelo repositório de imagens Docker Hub. 
+Para a transmissão de eventos em tempo real, foi escolhido o \textit{broker} de mensagens RabbitMQ \citep{RabbitMq}. RabbitMQ é um dos \textit{brokers} mais usados atualmente, pois implementa vários protocolos de comunicação assíncrona~\citep{Dobbelaere:2017:KVR:3093742.3093908}. O principal fator para a escolha do RabbitMQ como \textit{broker} foi a compatibilidade com a plataforma InterSCity, cuja implementação já utiliza o RabbitMQ como mensageiro assíncrono. Já que o sistema proposto neste trabalho foi desenvolvido como uma extensão da plataforma InterSCity, é interessante utilizar em sua implementação as mesmas ferramentas usadas na plataforma, para permitir uma maior integração entre eles.
+No protótipo do sistema aqui apresentado, o RabbitMQ opera dentro de um contêiner Docker, cuja imagem é disponibilizada oficialmente pelo repositório de imagens Docker Hub~\cite{Dockerhub}. 
 
 
 
@@ -120,21 +122,20 @@ No protótipo do sistema aqui apresentado, o RabbitMQ opera dentro de um contêi
 \section{Sistema Gerenciador de Banco de Dados}
 \label{sec:redis}
 
-Como sistema gerenciador de banco de dados, para guardar a definição dos eventos e seus metadados, foi escolhido o \cite{Redis}, um sistema \textit{NoSQL} baseado no modelo de dados chave-valor.
-O Redis foi escolhido por ser de \textit{software} livre, ter uma grande comunidade de usuários e apresentar uma das menores latências entre sistemas gerenciadores de bancos de dados~\citep{10.14778/2367502.2367512}.
+Como sistema gerenciador de banco de dados, para guardar a definição dos eventos e seus metadados, foi escolhido o \cite{Redis}, um sistema NoSQL baseado no modelo de dados chave-valor.
+O Redis foi escolhido por ser um \textit{software} livre, ter uma grande comunidade de usuários e apresentar uma das menores latências entre sistemas gerenciadores de bancos de dados~\citep{10.14778/2367502.2367512}.
 No protótipo do sistema \texttt{CEP Handler} desenvolvido, o Redis opera dentro de um único contêiner Docker, cuja imagem é disponibilizada oficialmente pelo repositório de imagens \textit{Docker Hub}.
  
 
-Para o armazenamento chave-valor, são usados como chaves para os tipos de eventos identificadores do tipo UUID - (\textit{universally unique identifier}). A unicidade deste tipo de identificador não depende de um registro central ou de coordenação entre diferentes partes do sistema distribuído para poderem garantir sua unicidade, em contraste com a maioria dos identificadores. A probabilidade que um UUID seja duplicado é negligenciável. O método para a geração desse tipo de identificador é reconhecido pela Open Software Foundation
+Para o armazenamento segundo o modelo de dados chave-valor,  identificadores do tipo UUID (\textit{universally unique identifier}) são usados como chaves para os tipos de evento. A unicidade desse tipo de identificador não depende de um registro central ou de coordenação entre diferentes partes do sistema distribuído, em contraste com a maioria dos demais tipos de identificadores. A probabilidade que um UUID seja duplicado é negligenciável. O método para a geração desse tipo de identificador é reconhecido pela Open Software Foundation
 \citep{osf}, 
 %(OSF)\footnote{\url{https://pubs.opengroup.org/onlinepubs/9629399/apdxa.htm}},
 pela  Internet Engineering Task Force %(IETF)\footnote{\url{https://tools.ietf.org/html/rfc4122}}
-\citep{ietf}
-e como parte do  ISO/IEC 11578:1996 "Information technology – Open Systems Interconnection – Remote Procedure Call (RPC)" e mais recentemente em  ITU-T Rec. X.667 | ISO/IEC 9834-8:2005
+\citep{ietf}, como parte do  ISO/IEC 11578:1996 ``Information technology – Open Systems Interconnection – Remote Procedure Call (RPC)'' e mais recentemente em  ITU-T Rec. X.667 | ISO/IEC 9834-8:2005
 %\footnote{\url{https://www.itu.int/ITU-T/studygroups/com17/oid.html}}
 \citep{ISOUUID}.%\todo{Revisar esse trecho final bagunçado. Vc queria dizer que o UUID é "reconhecido" ou "recomendado"? - reconhecido.}
 
-No sistema \textit{CEP Handler}, associados a  uma chave UUID de tipo de evento estão: os tipos de eventos que lhe servem de entrada, o nome do tipo de evento, a sua definição em EPL e os endereços de \textit{Web Hooks} a serem chamados no caso da detecção de eventos desse tipo.
+No sistema \texttt{CEP Handler}, estão associados a  uma chave UUID de tipo de evento: os tipos de eventos que lhe servem de entrada, o nome do tipo de evento, a sua definição em EPL e os endereços de \textit{webhooks} a serem chamados no caso da detecção de eventos desse tipo.
 
 
 %\todo[inline]{Incluir no início da capítulo a URL do repositório da sua implementação.}
