--- a/tese-exemplo.tex
+++ b/tese-exemplo.tex
@@ -268,9 +268,17 @@ framexrightmargin=10pt
 
 \noindent SCATTONE, F. F. \textbf{Processamento de Eventos Complexos Nativo de Nuvem para Cidades Inteligentes}. 2020. Dissertação %(Mestrado)
 - Instituto de Matemática e Estatística, Universidade de São Paulo, São Paulo, 2020.\\
-Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popularidade, sendo promovido com os propósitos de aumentar a sustentabilidade e melhorar a qualidade de vida para os residentes de centros urbanos. Processamento de Eventos Complexos (CEP - \emph{Complex Event Processing}) é uma das técnicas mais usadas para processar dados em tempo real em grande volume e velocidade, como os provenientes de Cidades Inteligentes. CEP considera cada novo dado coletado como um evento e permite definir novos tipos de eventos a partir da identificação de padrões de ocorrência específicos de outros eventos. Escalabilidade e tolerância a falhas no ambiente de execução são requisitos não funcionais para o processamento de fluxos de dados que sofrem grande variação de volume ao longo do tempo, como em Cidades Inteligentes. O cumprimento destes requisitos é essencial para manter o sistema em funcionamento com a latência de detecção de eventos em patamares aceitáveis para sistemas de tempo real. O uso de plataformas de nuvem é conveniente para realizar o processamento de eventos de forma distribuída e escalável, pois permite o gerenciamento dinâmico de recursos computacionais. 
-As solução atuais de \textit{software} livre de CEP não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
-Este trabalho apresenta uma arquitetura de microsserviços para CEP distribuído nativa de nuvem, que gerencia dinamicamente os recursos computacionais usados na execução. Nela, o processamento de eventos complexos é dividido entre múltiplas instâncias de um mesmo microsserviço. O estilo arquitetural de coreografia foi usado, no qual a distribuição do processamento é coordenada entre as instâncias e não há um serviço central que comanda todo o sistema. Isso resulta em uma maior tolerância a falhas, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. Um protótipo da arquitetura de microsserviços foi implementado, utilizando somente ferramentas de \textit{software} livre, de forma integrada à plataforma de cidades inteligentes InterSCity, do Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes. Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado, a partir de dados reais de posições de ônibus da frota municipal da cidade de São Paulo. Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta, e que ele mantém a variação na latência da detecção de eventos baixa.\\
+Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popularidade, sendo promovido com os propósitos de aumentar a sustentabilidade e melhorar a qualidade de vida para os residentes de centros urbanos. Processamento de Eventos Complexos (CEP - \emph{Complex Event Processing}) é uma das técnicas mais usadas para processar dados em tempo real em grande volume e velocidade, como os provenientes de Cidades Inteligentes. CEP considera cada novo dado coletado como um evento e permite definir novos tipos de eventos a partir da identificação de padrões de ocorrência específicos de outros eventos. Escalabilidade e tolerância a falhas no ambiente de execução são requisitos não funcionais para o processamento de fluxos de dados que sofrem grande variação de volume ao longo do tempo, como em Cidades Inteligentes. O cumprimento desses requisitos é essencial para manter o sistema em funcionamento com a latência de detecção de eventos em patamares aceitáveis para sistemas de tempo real. O uso de plataformas de nuvem é conveniente para realizar o processamento de eventos de forma distribuída e escalável, pois permite o gerenciamento dinâmico de recursos computacionais. 
+As soluções atuais de \textit{software} livre de CEP não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
+Este trabalho apresenta uma arquitetura de microsserviços para CEP distribuído nativa de nuvem, que gerencia dinamicamente os recursos computacionais usados na execução. Nela, o processamento de eventos complexos é dividido entre múltiplas instâncias de um mesmo microsserviço. O estilo arquitetural de coreografia foi usado, no qual a distribuição do processamento é coordenada entre as instâncias e não há um serviço central que comanda todo o sistema. Isso resulta em uma maior tolerância a falhas, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. Um protótipo da arquitetura de microsserviços foi implementado, utilizando somente ferramentas de \textit{software} livre, de forma integrada à plataforma de cidades inteligentes InterSCity, do Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes. Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado: a detecção de problemas de tráfego a partir de dados reais de posições de ônibus do transporte público da cidade de São Paulo. Quatro métricas foram analisadas: latência, vazão, número total de eventos detectados e tempo de uso de recursos computacionais. Os resultados do experimento mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta. 
+Além disso, as latências normalmente ficaram abaixo de
+cem milissegundos, satisfazendo os requisitos de processamento em tempo real do cenário considerado.
+
+%O número de eventos detectados variou entre uma execução e outra, o que pode ser atribuído a variação na latência. 
+% A média do tempo de uso do ambiente de execução não apresentou diferença significativa entre o uso de um algoritmo de balanceamento de carga ou outro.
+
+
+%Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta, e que ele mantém a variação na latência da detecção de eventos baixa.\\
 
 %, mesmo durante a expansão do número de nós de processamento, sem perda significativa de eventos detectados.
  
@@ -321,7 +329,7 @@ In order to evaluate system performance four metrics are analyzed: latency, thro
          EPA         & Processador de Eventos (\emph{Event Processing Agent})\\
          SGBD        & Sistema Gerenciador de Banco de Dados \\
          IoT         & Internet das Coisas (\emph{Internet Of Things})\\
-         ICT         & Tecnologias da Informação e Comunicação (\emph{Information and Communication Technologies})\\
+%         ICT         & Tecnologias da Informação e Comunicação (\emph{Information and Communication Technologies})\\
          API		 & Interface de Programação de Aplicação (\emph{Application programming interface}) \\
          UUID        & Identificador Único Universal (\emph{Universally Unique Identifier}) \\
          SPTrans   & São Paulo Transporte S/A 
@@ -385,6 +393,6 @@ In order to evaluate system performance four metrics are analyzed: latency, thro
 %\index{DFT|see{transformada discreta de Fourier}}
 %\index{Fourier!transformada|see{transformada de Fourier}}
 
-\printindex   % imprime o índice remissivo no documento 
+%\printindex   % imprime o índice remissivo no documento 
 
 \end{document}
